fix: Add Unity Catalog volume support for DBFS-disabled workspaces
- Add automatic detection and fallback to Unity Catalog volumes when DBFS is disabled
- Implement create_volume() and volume_upload_file() functions for volume management
- Update orchestration notebook to support base_path parameter inheritance
- Move catalog creation before CSV upload to ensure volumes can be created
- Fix file upload to use raw bytes instead of multipart form-data
- Update deployment documentation with Unity Catalog legacy feature info
- Add troubleshooting guidance for DBFS-disabled workspaces

This change enables the deployment script to work with Databricks workspaces
that have Unity Catalog's 'Disable Legacy Features' enabled (GA feature),
automatically using managed volumes instead of DBFS for sample data storage.

--- a/src/databricks/notebooks/run_bronze_to_adb.ipynb
+++ b/src/databricks/notebooks/run_bronze_to_adb.ipynb
@@ -27,6 +27,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup Parameters\n",
+    "\n",
+    "Define widgets for catalog, schema, and base path that will be inherited by all child notebooks."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define widgets that will be inherited by all child notebooks\n",
+    "# These can be overridden when running as a job via parameters\n",
+    "dbutils.widgets.text(\"catalog_name\", \"maagcatalog\")\n",
+    "dbutils.widgets.text(\"schema_name\", \"sales\")\n",
+    "dbutils.widgets.text(\"base_path\", \"/FileStore/tables/maag\")\n",
+    "\n",
+    "# Get the values\n",
+    "catalog_name = dbutils.widgets.get(\"catalog_name\")\n",
+    "schema_name = dbutils.widgets.get(\"schema_name\")\n",
+    "base_path = dbutils.widgets.get(\"base_path\")\n",
+    "\n",
+    "print(f\"📋 Configuration:\")\n",
+    "print(f\"   Catalog: {catalog_name}\")\n",
+    "print(f\"   Schema: {schema_name}\")\n",
+    "print(f\"   Base Path: {base_path}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
