Refactor UDF deployment scripts and enhance error handling
- Rearranged steps in deploy_udf_solution.py for better logical flow.
- Introduced detailed error handling and logging for each deployment step.
- Added configuration variables for notebooks and lakehouses to improve clarity.
- Updated fabric_api.py to enhance notebook creation and retrieval with better error management.
- Modified udf_data_agent.py to accept notebook path as an argument and parse selected tables in schema:table format.
- Improved environment setup in udf_environment.py to ensure successful library updates and environment publishing.
- Enhanced notebook deployment logic in udf_notebook.py to streamline create/update operations.
- Updated utility functions to provide clearer summaries of executed and failed steps.
- Revised configure_data_agent_lakehouse.ipynb to reflect changes in selected_tables format and improve documentation.

--- a/src/fabric/notebooks/configure_data_agent_lakehouse.ipynb
+++ b/src/fabric/notebooks/configure_data_agent_lakehouse.ipynb
@@ -79,7 +79,8 @@
                 "lakehouse_workspace_id = \"__LAKEHOUSE_WORKSPACE_ID__\"\n",
                 "\n",
                 "# Configure specific tables to be available to the AI\n",
-                "# Note: For Lakehouse tables, use schema (e.g., \"dbo\") and table name\n",
+                "# Note: selected_tables is a list of [schema, table_name] pairs\n",
+                "# Example: [[\"dbo\", \"customers\"], [\"dbo\", \"orders\"], [\"sales\", \"products\"]]\n",
                 "selected_tables = __SELECTED_TABLES__\n",
                 "\n",
                 "print(f\"📋 Configuration:\")\n",
@@ -109,7 +110,7 @@
                 "print(f\"   Data Source Instructions: {len(data_source_instructions)} characters\")\n",
                 "print(f\"   Fewshots Examples: {len(fewshots_examples)} examples prepared\")\n",
                 "print(f\"   Selected Tables: {len(selected_tables)} tables configured\")\n",
-                "print(f\"   ✅ Configuration ready\")"
+                "print(f\"   ✅ Configuration ready\")\n"
             ]
         },
         {
@@ -212,6 +213,7 @@
                 "print(f\"   Datasource ID: {datasource._id}\")\n",
                 "\n",
                 "# Configure table selection from config variables\n",
+                "# Note: selected_tables is a list of [schema, table_name] pairs\n",
                 "print(f\"\\n📋 Configuring table selection...\")\n",
                 "print(f\"   Selected tables: {', '.join([f'{schema}.{table}' for schema, table in selected_tables])}\")\n",
                 "\n",
@@ -221,7 +223,7 @@
                 "    print(f\"   ✓ Enabled table: {schema}.{table_name}\")\n",
                 "\n",
                 "print(f\"✅ Table configuration completed\")\n",
-                "print(f\"   Tables available to AI: {', '.join([f'{schema}.{table}' for schema, table in selected_tables])}\")"
+                "print(f\"   Tables available to AI: {', '.join([f'{schema}.{table}' for schema, table in selected_tables])}\")\n"
             ]
         },
         {
@@ -336,7 +338,7 @@
                 "print(f\"   Status: Published and Ready\")\n",
                 "print(f\"   Available Tables: {', '.join([f'{schema}.{table}' for schema, table in selected_tables])}\")\n",
                 "print(f\"   Few-shot Examples: {len(fewshots_examples)}\")\n",
-                "print(f\"   Next: Test the agent with analytics queries!\")"
+                "print(f\"   Next: Test the agent with analytics queries!\")\n"
             ]
         }
     ],
