Refactor lakehouse path configuration in notebooks to use dynamic workspace and lakehouse IDs
- Updated multiple notebooks in the bronze_to_silver and silver_to_gold directories to replace hardcoded workspace and lakehouse names with dynamic retrieval methods.
- Introduced `fabric.get_notebook_workspace_id()` to obtain the workspace ID at runtime.
- Used `mssparkutils.lakehouse.get()` to dynamically fetch the lakehouse ID, ensuring compatibility with names that may contain spaces.
- Adjusted source paths for reading data from lakehouses accordingly.

--- a/src/fabric/notebooks/bronze_to_silver/bronze_to_silver_finance_invoice.ipynb
+++ b/src/fabric/notebooks/bronze_to_silver/bronze_to_silver_finance_invoice.ipynb
@@ -32,10 +32,17 @@
     "from pyspark.sql.types import *\n",
     "from pyspark.sql.functions import col, sum as spark_sum\n",
     "from pyspark.sql import functions as F\n",
+    "import sempy.fabric as fabric\n",
     "\n",
-    "WORKSPACE_NAME = \"Fabric_MAAG\"\n",
-    "SOURCE_LAKEHOUSE_NAME = \"maag_bronze\"\n",
-    "FABRIC_SOURCE_PATH = f\"abfss://{WORKSPACE_NAME}@onelake.dfs.fabric.microsoft.com/{SOURCE_LAKEHOUSE_NAME}.Lakehouse/Files/samples_fabric/finance/Invoice_Samples_Fabric.csv\"\n",
+    "# Configuration - Using correct Fabric cross-lakehouse path from Fabric portal\n",
+    "# Get workspace ID dynamically at runtime (avoids issues with spaces in workspace names)\n",
+    "WORKSPACE_ID = fabric.get_notebook_workspace_id()\n",
+    "\n",
+    "# Get lakehouse ID dynamically (avoids issues with lakehouse names)\n",
+    "lakehouse_properties = mssparkutils.lakehouse.get(\"maag_bronze\")\n",
+    "SOURCE_LAKEHOUSE_ID = lakehouse_properties.id\n",
+    "\n",
+    "FABRIC_SOURCE_PATH = f\"abfss://{WORKSPACE_ID}@onelake.dfs.fabric.microsoft.com/{SOURCE_LAKEHOUSE_ID}/Files/samples_fabric/finance/Invoice_Samples_Fabric.csv\"\n",
     "\n",
     "\n",
     "TARGET_SCHEMA = \"finance\"\n",
@@ -111,12 +118,15 @@
     "      .saveAsTable(TARGET_FULL_PATH)\n",
     "    print(f\"✅ Data loaded successfully to {TARGET_FULL_PATH}\")\n",
     "    # Verify the load\n",
-    "    result_count = spark.sql(f\"SELECT COUNT(*) as count FROM {TARGET_FULL_PATH}\").collect()[0][\"count\"]\n",
+    "    result_count = spark.sql(f\"SELECT COUNT(*) as count FROM {TARGET_FULL_PATH}\").collect()[0]['count']\n",
     "    print(f\"📊 Records in target table: {result_count}\")\n",
+    "\n",
     "    # Show sample of loaded data\n",
     "    print(f\"\\n📖 Sample from Silver table:\")\n",
     "    spark.sql(f\"SELECT * FROM {TARGET_FULL_PATH} ORDER BY InvoiceId\").show(10, truncate=False)\n",
+    "    \n",
     "    print(f\"🎉 Invoice data load complete!\")\n",
+    "\n",
     "except Exception as e:\n",
     "    print(f\"❌ Error loading data to table: {str(e)}\")\n",
     "    raise\n",
@@ -136,10 +146,17 @@
     "from pyspark.sql.types import *\n",
     "from pyspark.sql.functions import col, sum as spark_sum\n",
     "from pyspark.sql import functions as F\n",
+    "import sempy.fabric as fabric\n",
     "\n",
-    "WORKSPACE_NAME = \"Fabric_MAAG\"\n",
-    "SOURCE_LAKEHOUSE_NAME = \"maag_bronze\"\n",
-    "ADB_SOURCE_PATH = f\"abfss://{WORKSPACE_NAME}@onelake.dfs.fabric.microsoft.com/{SOURCE_LAKEHOUSE_NAME}.Lakehouse/Files/samples_fabric/finance/Invoice_Samples_ADB.csv\"\n",
+    "# Configuration - Using correct Fabric cross-lakehouse path from Fabric portal\n",
+    "# Get workspace ID dynamically at runtime (avoids issues with spaces in workspace names)\n",
+    "WORKSPACE_ID = fabric.get_notebook_workspace_id()\n",
+    "\n",
+    "# Get lakehouse ID dynamically (avoids issues with lakehouse names)\n",
+    "lakehouse_properties = mssparkutils.lakehouse.get(\"maag_bronze\")\n",
+    "SOURCE_LAKEHOUSE_ID = lakehouse_properties.id\n",
+    "\n",
+    "ADB_SOURCE_PATH = f\"abfss://{WORKSPACE_ID}@onelake.dfs.fabric.microsoft.com/{SOURCE_LAKEHOUSE_ID}/Files/samples_fabric/finance/Invoice_Samples_ADB.csv\"\n",
     "\n",
     "TARGET_SCHEMA = \"finance\"\n",
     "TARGET_TABLE = \"invoice\"\n",
@@ -217,11 +234,13 @@
     "    # Verify the load\n",
     "    result_count = spark.sql(f\"SELECT COUNT(*) as count FROM {TARGET_FULL_PATH}\").collect()[0][\"count\"]\n",
     "    print(f\"📊 Records in target table: {result_count}\")\n",
-    "    \n",
+    "\n",
     "    # Show sample of loaded data\n",
     "    print(f\"\\n📖 Sample from Silver table:\")\n",
     "    spark.sql(f\"SELECT * FROM {TARGET_FULL_PATH} ORDER BY InvoiceId\").show(10, truncate=False)\n",
+    "    \n",
     "    print(f\"🎉 Invoice data load complete!\")\n",
+    "\n",
     "except Exception as e:\n",
     "    print(f\"❌ Error loading data to table: {str(e)}\")\n",
     "    raise\n",
