--- a/src/fabric/notebooks/bronze_to_silver/bronze_to_silver_salesadb_orderLine.ipynb
+++ b/src/fabric/notebooks/bronze_to_silver/bronze_to_silver_salesadb_orderLine.ipynb
@@ -34,11 +34,17 @@
     "from pyspark.sql.types import *\n",
     "from pyspark.sql.functions import col, sum as spark_sum\n",
     "import os\n",
+    "import sempy.fabric as fabric\n",
     "\n",
     "# Configuration - Using correct Fabric cross-lakehouse path from Fabric portal\n",
-    "WORKSPACE_NAME = \"Fabric_MAAG\"\n",
-    "SOURCE_LAKEHOUSE_NAME = \"maag_bronze\"\n",
-    "SOURCE_PATH = f\"abfss://{WORKSPACE_NAME}@onelake.dfs.fabric.microsoft.com/{SOURCE_LAKEHOUSE_NAME}.Lakehouse/Files/samples_databricks/sales/OrderLine_Samples_ADB.csv\"\n",
+    "# Get workspace ID dynamically at runtime (avoids issues with spaces in workspace names)\n",
+    "WORKSPACE_ID = fabric.get_notebook_workspace_id()\n",
+    "\n",
+    "# Get lakehouse ID dynamically (avoids issues with lakehouse names)\n",
+    "lakehouse_properties = mssparkutils.lakehouse.get(\"maag_bronze\")\n",
+    "SOURCE_LAKEHOUSE_ID = lakehouse_properties.id\n",
+    "\n",
+    "SOURCE_PATH = f\"abfss://{WORKSPACE_ID}@onelake.dfs.fabric.microsoft.com/{SOURCE_LAKEHOUSE_ID}/Files/samples_databricks/sales/OrderLine_Samples_ADB.csv\"\n",
     "\n",
     "TARGET_SCHEMA = \"salesadb\"\n",
     "TARGET_TABLE = \"OrderLine\"\n",
@@ -90,7 +96,7 @@
     "df = df.withColumn(\"OrderLineNumber\", col(\"OrderLineNumber\").cast(IntegerType()))\n",
     "df = df.withColumn(\"ProductId\", col(\"ProductId\").cast(StringType()))\n",
     "df = df.withColumn(\"ProductName\", col(\"ProductName\").cast(StringType()))\n",
-    "df = df.withColumn(\"Quantity\", col(\"Quantity\").cast(DoubleType()))\n",
+    "df = df.withColumn(\"Quantity\", col(\"Quantity\").cast(IntegerType()))\n",
     "df = df.withColumn(\"UnitPrice\", col(\"UnitPrice\").cast(DoubleType()))\n",
     "df = df.withColumn(\"LineTotal\", col(\"LineTotal\").cast(DoubleType()))\n",
     "df = df.withColumn(\"DiscountAmount\", col(\"DiscountAmount\").cast(DoubleType()))\n",
@@ -107,10 +113,6 @@
     "    else:\n",
     "        print(f\"  {col_name}: ✅ No nulls\")\n",
     "\n",
-    "# Show value distributions for ProductId\n",
-    "print(f\"\\n🎯 ProductId Distribution:\")\n",
-    "df.groupBy(\"ProductId\").count().orderBy(\"ProductId\").show()\n",
-    "\n",
     "# Load data to Silver table\n",
     "print(f\"💾 Loading data to Silver table: {TARGET_FULL_PATH}\")\n",
     "\n",
@@ -124,7 +126,7 @@
     "    print(f\"✅ Data loaded successfully to {TARGET_FULL_PATH}\")\n",
     "\n",
     "    # Verify the load\n",
-    "    result_count = spark.sql(f\"SELECT COUNT(*) as count FROM {TARGET_FULL_PATH}\").collect()[0][\"count\"]\n",
+    "    result_count = spark.sql(f\"SELECT COUNT(*) as count FROM {TARGET_FULL_PATH}\").collect()[0]['count']\n",
     "    print(f\"📊 Records in target table: {result_count}\")\n",
     "\n",
     "    # Show sample of loaded data\n",
