--- a/src/fabric/notebooks/bronze_to_silver/bronze_to_silver_shared_customerRelationshipType.ipynb
+++ b/src/fabric/notebooks/bronze_to_silver/bronze_to_silver_shared_customerRelationshipType.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "fbad786b",
    "metadata": {
     "microsoft": {
@@ -102,11 +102,17 @@
     "from pyspark.sql.types import *\n",
     "from pyspark.sql.functions import col, sum\n",
     "import os\n",
+    "import sempy.fabric as fabric\n",
     "\n",
     "# Configuration - Using correct Fabric cross-lakehouse path from Fabric portal\n",
-    "WORKSPACE_NAME = \"Fabric_MAAG\"\n",
-    "SOURCE_LAKEHOUSE_NAME = \"maag_bronze\"\n",
-    "SOURCE_PATH = f\"abfss://{WORKSPACE_NAME}@onelake.dfs.fabric.microsoft.com/{SOURCE_LAKEHOUSE_NAME}.Lakehouse/Files/samples_fabric/shared/CustomerRelationshipType_Samples.csv\"\n",
+    "# Get workspace ID dynamically at runtime (avoids issues with spaces in workspace names)\n",
+    "WORKSPACE_ID = fabric.get_notebook_workspace_id()\n",
+    "\n",
+    "# Get lakehouse ID dynamically (avoids issues with lakehouse names)\n",
+    "lakehouse_properties = mssparkutils.lakehouse.get(\"maag_bronze\")\n",
+    "SOURCE_LAKEHOUSE_ID = lakehouse_properties.id\n",
+    "\n",
+    "SOURCE_PATH = f\"abfss://{WORKSPACE_ID}@onelake.dfs.fabric.microsoft.com/{SOURCE_LAKEHOUSE_ID}/Files/samples_fabric/shared/CustomerRelationshipType_Samples.csv\"\n",
     "\n",
     "TARGET_SCHEMA = \"shared\"\n",
     "TARGET_TABLE = \"customerrelationshiptype\"\n",
