--- a/src/fabric/notebooks/test_report/sales_trends_report.ipynb
+++ b/src/fabric/notebooks/test_report/sales_trends_report.ipynb
@@ -24,14 +24,20 @@
    "source": [
     "import pandas as pd\n",
     "from pyspark.sql.functions import col, sum as spark_sum, year\n",
+    "import sempy.fabric as fabric\n",
     "\n",
     "# Configuration\n",
-    "WORKSPACE_NAME = \"Fabric_MAAG\"\n",
-    "SOURCE_LAKEHOUSE_NAME = \"maag_silver\"\n",
+    "# Get workspace ID dynamically at runtime (avoids issues with spaces in workspace names)\n",
+    "WORKSPACE_ID = fabric.get_notebook_workspace_id()\n",
+    "\n",
+    "# Get lakehouse ID dynamically (avoids issues with lakehouse names)\n",
+    "lakehouse_properties = mssparkutils.lakehouse.get(\"maag_silver\")\n",
+    "SOURCE_LAKEHOUSE_ID = lakehouse_properties.id\n",
+    "\n",
     "SOURCE_SCHEMA = \"salesadb\"\n",
     "SOURCE_TABLE = \"order\"\n",
     "\n",
-    "SOURCE_TABLE_PATH = f\"abfss://{WORKSPACE_NAME}@onelake.dfs.fabric.microsoft.com/{SOURCE_LAKEHOUSE_NAME}.Lakehouse/Tables/{SOURCE_SCHEMA}/{SOURCE_TABLE}\"\n",
+    "SOURCE_TABLE_PATH = f\"abfss://{WORKSPACE_ID}@onelake.dfs.fabric.microsoft.com/{SOURCE_LAKEHOUSE_ID}/Tables/{SOURCE_SCHEMA}/{SOURCE_TABLE}\"\n",
     "\n",
     "# Read Order table from lakehouse\n",
     "df = spark.read.format(\"delta\").load(SOURCE_TABLE_PATH)\n",
