--- a/src/fabric/notebooks/bronze_to_silver/bronze_to_silver_finance_account.ipynb
+++ b/src/fabric/notebooks/bronze_to_silver/bronze_to_silver_finance_account.ipynb
@@ -31,11 +31,17 @@
     "from pyspark.sql.types import *\n",
     "from pyspark.sql.functions import col, sum as spark_sum\n",
     "from pyspark.sql import functions as F\n",
+    "import sempy.fabric as fabric\n",
     "\n",
     "# Configuration - Using correct Fabric cross-lakehouse path from Fabric portal\n",
-    "WORKSPACE_NAME = \"Fabric_MAAG\"\n",
-    "SOURCE_LAKEHOUSE_NAME = \"maag_bronze\"\n",
-    "FABRIC_SOURCE_PATH = f\"abfss://{WORKSPACE_NAME}@onelake.dfs.fabric.microsoft.com/{SOURCE_LAKEHOUSE_NAME}.Lakehouse/Files/samples_fabric/finance/Account_Samples_Fabric.csv\"\n",
+    "# Get workspace ID dynamically at runtime (avoids issues with spaces in workspace names)\n",
+    "WORKSPACE_ID = fabric.get_notebook_workspace_id()\n",
+    "\n",
+    "# Get lakehouse ID dynamically (avoids issues with lakehouse names)\n",
+    "lakehouse_properties = mssparkutils.lakehouse.get(\"maag_bronze\")\n",
+    "SOURCE_LAKEHOUSE_ID = lakehouse_properties.id\n",
+    "\n",
+    "FABRIC_SOURCE_PATH = f\"abfss://{WORKSPACE_ID}@onelake.dfs.fabric.microsoft.com/{SOURCE_LAKEHOUSE_ID}/Files/samples_fabric/finance/Account_Samples_Fabric.csv\"\n",
     "\n",
     "TARGET_SCHEMA = \"finance\"\n",
     "TARGET_TABLE = \"account\"\n",
@@ -139,10 +145,17 @@
     "# from pyspark.sql.types import *\n",
     "# from pyspark.sql.functions import col, sum as spark_sum\n",
     "# from pyspark.sql import functions as F\n",
+    "# import sempy.fabric as fabric\n",
     "#\n",
-    "# WORKSPACE_NAME = \"Fabric_MAAG\"\n",
-    "# SOURCE_LAKEHOUSE_NAME = \"MAAG_LH_Bronze\"\n",
-    "# ADB_SOURCE_PATH = f\"abfss://{WORKSPACE_NAME}@onelake.dfs.fabric.microsoft.com/{SOURCE_LAKEHOUSE_NAME}.Lakehouse/Files/samples_databricks/finance/Account_Samples_ADB.csv\"\n",
+    "# # Configuration - Using correct Fabric cross-lakehouse path from Fabric portal\n",
+    "# # Get workspace ID dynamically at runtime (avoids issues with spaces in workspace names)\n",
+    "# WORKSPACE_ID = fabric.get_notebook_workspace_id()\n",
+    "#\n",
+    "# # Get lakehouse ID dynamically (avoids issues with lakehouse names)\n",
+    "# lakehouse_properties = mssparkutils.lakehouse.get(\"maag_bronze\")\n",
+    "# SOURCE_LAKEHOUSE_ID = lakehouse_properties.id\n",
+    "#\n",
+    "# ADB_SOURCE_PATH = f\"abfss://{WORKSPACE_ID}@onelake.dfs.fabric.microsoft.com/{SOURCE_LAKEHOUSE_ID}/Files/samples_databricks/finance/Account_Samples_ADB.csv\"\n",
     "#\n",
     "# TARGET_SCHEMA = \"finance\"\n",
     "# TARGET_TABLE = \"Account\"\n",
