--- a/src/fabric/notebooks/bronze_to_silver/bronze_to_silver_finance_payment.ipynb
+++ b/src/fabric/notebooks/bronze_to_silver/bronze_to_silver_finance_payment.ipynb
@@ -32,10 +32,17 @@
     "from pyspark.sql.types import *\n",
     "from pyspark.sql.functions import col, sum as spark_sum\n",
     "from pyspark.sql import functions as F\n",
+    "import sempy.fabric as fabric\n",
     "\n",
-    "WORKSPACE_NAME = \"Fabric_MAAG\"\n",
-    "SOURCE_LAKEHOUSE_NAME = \"maag_bronze\"\n",
-    "FABRIC_SOURCE_PATH = f\"abfss://{WORKSPACE_NAME}@onelake.dfs.fabric.microsoft.com/{SOURCE_LAKEHOUSE_NAME}.Lakehouse/Files/samples_fabric/finance/Payment_Samples_Fabric.csv\"\n",
+    "# Configuration - Using correct Fabric cross-lakehouse path from Fabric portal\n",
+    "# Get workspace ID dynamically at runtime (avoids issues with spaces in workspace names)\n",
+    "WORKSPACE_ID = fabric.get_notebook_workspace_id()\n",
+    "\n",
+    "# Get lakehouse ID dynamically (avoids issues with lakehouse names)\n",
+    "lakehouse_properties = mssparkutils.lakehouse.get(\"maag_bronze\")\n",
+    "SOURCE_LAKEHOUSE_ID = lakehouse_properties.id\n",
+    "\n",
+    "FABRIC_SOURCE_PATH = f\"abfss://{WORKSPACE_ID}@onelake.dfs.fabric.microsoft.com/{SOURCE_LAKEHOUSE_ID}/Files/samples_fabric/finance/Payment_Samples_Fabric.csv\"\n",
     "\n",
     "TARGET_SCHEMA = \"finance\"\n",
     "TARGET_TABLE = \"payment\"\n",
@@ -136,10 +143,17 @@
     "from pyspark.sql.types import *\n",
     "from pyspark.sql.functions import col, sum as spark_sum\n",
     "from pyspark.sql import functions as F\n",
+    "import sempy.fabric as fabric\n",
     "\n",
-    "WORKSPACE_NAME = \"Fabric_MAAG\"\n",
-    "SOURCE_LAKEHOUSE_NAME = \"maag_bronze\"\n",
-    "ADB_SOURCE_PATH = f\"abfss://{WORKSPACE_NAME}@onelake.dfs.fabric.microsoft.com/{SOURCE_LAKEHOUSE_NAME}.Lakehouse/Files/samples_fabric/finance/Payment_Samples_ADB.csv\"\n",
+    "# Configuration - Using correct Fabric cross-lakehouse path from Fabric portal\n",
+    "# Get workspace ID dynamically at runtime (avoids issues with spaces in workspace names)\n",
+    "WORKSPACE_ID = fabric.get_notebook_workspace_id()\n",
+    "\n",
+    "# Get lakehouse ID dynamically (avoids issues with lakehouse names)\n",
+    "lakehouse_properties = mssparkutils.lakehouse.get(\"maag_bronze\")\n",
+    "SOURCE_LAKEHOUSE_ID = lakehouse_properties.id\n",
+    "\n",
+    "ADB_SOURCE_PATH = f\"abfss://{WORKSPACE_ID}@onelake.dfs.fabric.microsoft.com/{SOURCE_LAKEHOUSE_ID}/Files/samples_fabric/finance/Payment_Samples_ADB.csv\"\n",
     "\n",
     "TARGET_SCHEMA = \"finance\"\n",
     "TARGET_TABLE = \"payment\"\n",
