--- a/src/fabric/notebooks/bronze_to_silver/bronze_to_silver_salesadb_orderPayment.ipynb
+++ b/src/fabric/notebooks/bronze_to_silver/bronze_to_silver_salesadb_orderPayment.ipynb
@@ -34,11 +34,17 @@
     "from pyspark.sql.types import *\n",
     "from pyspark.sql.functions import col, sum as spark_sum\n",
     "import os\n",
+    "import sempy.fabric as fabric\n",
     "\n",
     "# Configuration - Using correct Fabric cross-lakehouse path from Fabric portal\n",
-    "WORKSPACE_NAME = \"Fabric_MAAG\"\n",
-    "SOURCE_LAKEHOUSE_NAME = \"maag_bronze\"\n",
-    "SOURCE_PATH = f\"abfss://{WORKSPACE_NAME}@onelake.dfs.fabric.microsoft.com/{SOURCE_LAKEHOUSE_NAME}.Lakehouse/Files/samples_databricks/sales/OrderPayment_ADB.csv\"\n",
+    "# Get workspace ID dynamically at runtime (avoids issues with spaces in workspace names)\n",
+    "WORKSPACE_ID = fabric.get_notebook_workspace_id()\n",
+    "\n",
+    "# Get lakehouse ID dynamically (avoids issues with lakehouse names)\n",
+    "lakehouse_properties = mssparkutils.lakehouse.get(\"maag_bronze\")\n",
+    "SOURCE_LAKEHOUSE_ID = lakehouse_properties.id\n",
+    "\n",
+    "SOURCE_PATH = f\"abfss://{WORKSPACE_ID}@onelake.dfs.fabric.microsoft.com/{SOURCE_LAKEHOUSE_ID}/Files/samples_databricks/sales/OrderPayment_ADB.csv\"\n",
     "\n",
     "TARGET_SCHEMA = \"salesadb\"\n",
     "TARGET_TABLE = \"OrderPayment\"\n",
@@ -97,10 +103,6 @@
     "    else:\n",
     "        print(f\"  {col_name}: ✅ No nulls\")\n",
     "\n",
-    "# Show value distributions for PaymentMethod\n",
-    "print(f\"\\n🎯 PaymentMethod Distribution:\")\n",
-    "df.groupBy(\"PaymentMethod\").count().orderBy(\"PaymentMethod\").show()\n",
-    "\n",
     "# Load data to Silver table\n",
     "print(f\"💾 Loading data to Silver table: {TARGET_FULL_PATH}\")\n",
     "\n",
@@ -114,7 +116,7 @@
     "    print(f\"✅ Data loaded successfully to {TARGET_FULL_PATH}\")\n",
     "\n",
     "    # Verify the load\n",
-    "    result_count = spark.sql(f\"SELECT COUNT(*) as count FROM {TARGET_FULL_PATH}\").collect()[0][\"count\"]\n",
+    "    result_count = spark.sql(f\"SELECT COUNT(*) as count FROM {TARGET_FULL_PATH}\").collect()[0]['count']\n",
     "    print(f\"📊 Records in target table: {result_count}\")\n",
     "\n",
     "    # Show sample of loaded data\n",
