--- a/src/fabric/notebooks/silver_to_gold/silver_to_gold_sales_order.ipynb
+++ b/src/fabric/notebooks/silver_to_gold/silver_to_gold_sales_order.ipynb
@@ -30,15 +30,21 @@
     "from pyspark.sql.types import *\n",
     "from pyspark.sql.functions import col, sum as spark_sum, current_timestamp\n",
     "import os\n",
+    "import sempy.fabric as fabric\n",
     "\n",
     "# Configuration - Silver to Gold data flow\n",
-    "WORKSPACE_NAME = \"Fabric_MAAG\"\n",
-    "SOURCE_LAKEHOUSE_NAME = \"MAAG_LH_Silver\"\n",
+    "# Get workspace ID dynamically at runtime (avoids issues with spaces in workspace names)\n",
+    "WORKSPACE_ID = fabric.get_notebook_workspace_id()\n",
+    "\n",
+    "# Get lakehouse ID dynamically (avoids issues with lakehouse names)\n",
+    "lakehouse_properties = mssparkutils.lakehouse.get(\"MAAG_LH_Silver\")\n",
+    "SOURCE_LAKEHOUSE_ID = lakehouse_properties.id\n",
+    "\n",
     "SOURCE_SCHEMA = \"sales\"\n",
     "SOURCE_TABLE = \"order\"\n",
     "\n",
     "# Source: Absolute path to Silver lakehouse table\n",
-    "SOURCE_TABLE_PATH = f\"abfss://{WORKSPACE_NAME}@onelake.dfs.fabric.microsoft.com/{SOURCE_LAKEHOUSE_NAME}.Lakehouse/Tables/{SOURCE_SCHEMA}/{SOURCE_TABLE}\"\n",
+    "SOURCE_TABLE_PATH = f\"abfss://{WORKSPACE_ID}@onelake.dfs.fabric.microsoft.com/{SOURCE_LAKEHOUSE_ID}/Tables/{SOURCE_SCHEMA}/{SOURCE_TABLE}\"\n",
     "\n",
     "# Target: Gold lakehouse (attached as default)\n",
     "TARGET_SCHEMA = \"sales\"\n",
